@@ -5,6 +5,7 @@ Changes in 4.2:
 - Revamp UPnP plugin (266397)
 - Fix bug making it possible to add conflicting items to the schedule (268879)
 - Make it possible for schedule items to span multiple days (225939)
+- Include disk usage of existing files when calculating bytes left after download in FileSelectDlg (267220)
 
 Changes in 4.1:
 - Check if source files are missing before moving them (265607)
